fix some missing Simplified Chinese locales

--- a/data/locales/en.json
+++ b/data/locales/en.json
@@ -335,28 +335,29 @@
             "title": "Firmware",
             "update": "Firmware Update:",
             "open_page": "Open Update Page"
+        },
+        "diagnostics": {
+            "title": "Diagnostics",
+            "hardware_tests": "Hardware Tests",
+            "description": "Run comprehensive hardware and software tests to verify all FPVGate components are functioning correctly.",
+            "run_test": "Run System Self-Test",
+            "results_title": "Test Results",
+            "running": "Running tests...",
+            "monitor_title": "System Monitor",
+            "monitor_description": "Monitor real-time system events including WiFi status, race events, RSSI changes, and webhooks.",
+            "start_monitor": "Start Monitor",
+            "stop_monitor": "Stop Monitor",
+            "clear": "Clear",
+            "auto_scroll": "Auto-scroll",
+            "monitor_stopped": "System monitor stopped. Click \"Start Monitor\" to begin.",
+            "monitor_started": "[SYSTEM] Serial monitor started",
+            "monitor_cleared": "Monitor cleared...",
+            "all_passed": "All Tests Passed!",
+            "some_failed": "Some Tests Failed",
+            "error_running": "Error Running Tests",
+            "run_all": "Run All Tests",
+            "run_again": "Run All Tests Again"
         }
-    },
-    "diag": {
-        "hardware_tests": "Hardware Tests",
-        "description": "Run comprehensive hardware and software tests to verify all FPVGate components are functioning correctly.",
-        "run_test": "Run System Self-Test",
-        "results_title": "Test Results",
-        "running": "Running tests...",
-        "monitor_title": "System Monitor",
-        "monitor_description": "Monitor real-time system events including WiFi status, race events, RSSI changes, and webhooks.",
-        "start_monitor": "Start Monitor",
-        "stop_monitor": "Stop Monitor",
-        "clear": "Clear",
-        "auto_scroll": "Auto-scroll",
-        "monitor_stopped": "System monitor stopped. Click \"Start Monitor\" to begin.",
-        "monitor_started": "[SYSTEM] Serial monitor started",
-        "monitor_cleared": "Monitor cleared...",
-        "all_passed": "All Tests Passed!",
-        "some_failed": "Some Tests Failed",
-        "error_running": "Error Running Tests",
-        "run_all": "Run All Tests",
-        "run_again": "Run All Tests Again"
     },
     "modals": {
         "track": {
