--- a/data/locales/zh-CN.json
+++ b/data/locales/zh-CN.json
@@ -102,7 +102,29 @@
         "start_wizard": "开始校准向导",
         "enter_rssi": "进入 RSSI:",
         "exit_rssi": "退出 RSSI:",
-        "save_thresholds": "保存 RSSI 阈值"
+        "save_thresholds": "保存 RSSI 阈值",
+        "wizard_title_recording": "校准向导 - 录制中",
+        "wizard_title_marking": "校准向导 - 标记圈数峰值",
+        "wizard_title_results": "校准向导 - 结果",
+        "wizard_instructions_title": "说明:",
+        "wizard_step1": "穿越机穿过门3次",
+        "wizard_step2": "确保每次穿过时都有清晰的信号峰值",
+        "wizard_step3": "完成后点击“停止录制”",
+        "wizard_recording_rssi": "正在录制 RSSI 数据...",
+        "wizard_samples": "样本数: {n}",
+        "wizard_stop_recording": "停止录制",
+        "wizard_marking_instructions": "点击图表标记每一圈的最高点（峰值）:",
+        "wizard_highest_peak": "最高峰值",
+        "wizard_mark_peaks_tip": "共标记3个峰值（每圈一个）",
+        "wizard_auto_calc_tip": "进入/退出阈值将自动计算",
+        "wizard_mark_peak_n": "标记峰值 {n}",
+        "wizard_undo": "撤销上一步",
+        "wizard_calculate": "计算阈值",
+        "wizard_enter_rssi": "计算出的进入 RSSI:",
+        "wizard_exit_rssi": "计算出的退出 RSSI:",
+        "wizard_note_title": "注意:",
+        "wizard_results_note": "这些数值是根据您的圈数数据和安全边际计算得出的。您现在可以应用它们，如果需要也可以手动微调。",
+        "wizard_apply": "应用阈值"
     },
     "settings": {
         "title": "设置",
@@ -116,6 +138,7 @@
             "system": "系统设置",
             "diagnostics": "诊断"
         },
+        "sidebar_header": "设置",
         "config": {
             "download": "下载配置",
             "import": "导入配置",
@@ -312,28 +335,29 @@
             "title": "固件",
             "update": "固件更新:",
             "open_page": "打开更新页面"
+        },
+        "diagnostics": {
+            "title": "诊断",
+            "hardware_tests": "硬件测试",
+            "description": "运行全面的硬件和软件测试，验证所有 FPVGate 组件是否正常运行。",
+            "run_test": "运行系统自检",
+            "results_title": "测试结果",
+            "running": "正在运行测试...",
+            "monitor_title": "系统监视器",
+            "monitor_description": "监视实时系统事件，包括 WiFi 状态、比赛事件、RSSI 变化和 Webhooks。",
+            "start_monitor": "启动监视器",
+            "stop_monitor": "停止监视器",
+            "clear": "清除",
+            "auto_scroll": "自动滚动",
+            "monitor_stopped": "系统监视器已停止。点击“启动监视器”开始。",
+            "monitor_started": "[系统] 串口监视器已启动",
+            "monitor_cleared": "监视器已清除...",
+            "all_passed": "所有测试通过！",
+            "some_failed": "部分测试失败",
+            "error_running": "运行测试出错",
+            "run_all": "运行所有测试",
+            "run_again": "重新运行所有测试"
         }
-    },
-    "diag": {
-        "hardware_tests": "硬件测试",
-        "description": "运行全面的硬件和软件测试，验证所有 FPVGate 组件是否正常运行。",
-        "run_test": "运行系统自检",
-        "results_title": "测试结果",
-        "running": "正在运行测试...",
-        "monitor_title": "系统监视器",
-        "monitor_description": "实时监控系统事件，包括 WiFi 状态、比赛事件、RSSI 变化和 webhooks。",
-        "start_monitor": "启动监视器",
-        "stop_monitor": "停止监视器",
-        "clear": "清除",
-        "auto_scroll": "自动滚动",
-        "monitor_stopped": "系统监视器已停止。点击“启动监视器”开始。",
-        "monitor_started": "[系统] 串口监视器已启动",
-        "monitor_cleared": "监视器已清除...",
-        "all_passed": "所有测试通过！",
-        "some_failed": "部分测试失败",
-        "error_running": "运行测试出错",
-        "run_all": "运行所有测试",
-        "run_again": "重新运行所有测试"
     },
     "modals": {
         "track": {
